# adaw

./: .gitignore  README.md  exam-collector.user.js  pyproject.toml
cq_forward/: __init__.py  main.py  manifest.toml
keyword-reply/: index.mjs
keyword-reply/.codegraph/: daemon.pid
keyword-reply/.reasonix/: desktop-topic-title-sources.json  desktop-topic-titles.json
keyword-reply/webui/: index.html
plugins/daily-checkin/: index.mjs  package.json  render.cs
plugins/daily-checkin/webui/: shop.html
plugins/keyword-reply/: index.mjs  package.json
plugins/keyword-reply/webui/: index.html
